force-app/main/default/objects/Managed_Item_Inspection__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspected By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Managed Item Inspections</relationshipLabel>
    <relationshipName>Managed_Item_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>