force-app/main/default/objects/Managed_Item_Inspection__c/fields/Inspected_for_WEAR__c.field-meta.xml
<CustomField>
    <fullName>Inspected_for_WEAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links checked for WEAR (LESS THAN 10%)</label>
    <type>Checkbox</type>
</CustomField>