force-app/main/default/objects/Managed_Item_Inspection__c/fields/Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Result__c</fullName>
    <label>Overall Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
                <default>true</default>
                <label>Pass</label>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>