force-app/main/default/objects/Managed_Item_Inspection__c/fields/Karabiner_s_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Karabiner_s_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Karabiner/s Inspection</label>
    <type>Checkbox</type>
</CustomField>