force-app/main/default/objects/Managed_Item_Inspection__c/fields/Latch_lock__c.field-meta.xml
<CustomField>
    <fullName>Latch_lock__c</fullName>
    <label>Latch Lock Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>