force-app/main/default/objects/Managed_Item_Inspection__c/fields/Latch_lock_hook_catch_meets_body__c.field-meta.xml
<CustomField>
    <fullName>Latch_lock_hook_catch_meets_body__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>clearance allowance depend on hooks size - refer to  TABLE 6 Aust Standard</inlineHelpText>
    <label>Latch lock hook catch meets body</label>
    <type>Checkbox</type>
</CustomField>