force-app/main/default/objects/Managed_Item_Inspection__c/fields/Latch_lock_hook_catch_parallel_with_body__c.field-meta.xml
<CustomField>
    <fullName>Latch_lock_hook_catch_parallel_with_body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latch lock hook catch parallel with body</label>
    <type>Checkbox</type>
</CustomField>