force-app/main/default/objects/Managed_Item_Inspection__c/fields/Less_than_10_years_since_manufacture__c.field-meta.xml
<CustomField>
    <fullName>Less_than_10_years_since_manufacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less than 10 years since manufacture</label>
    <type>Checkbox</type>
</CustomField>