force-app/main/default/objects/Managed_Item_Inspection__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <inlineHelpText>Electrician&apos;s Licence Number</inlineHelpText>
    <label>Licence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>