force-app/main/default/objects/Managed_Item_Inspection__c/fields/Links_checked_for_CORROSION_STRETCHING__c.field-meta.xml
<CustomField>
    <fullName>Links_checked_for_CORROSION_STRETCHING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links checked for CORROSION/STRETCHING</label>
    <type>Checkbox</type>
</CustomField>