force-app/main/default/objects/Managed_Item_Inspection__c/fields/Links_checked_for_NICKS_CRACKS_GOUGING__c.field-meta.xml
<CustomField>
    <fullName>Links_checked_for_NICKS_CRACKS_GOUGING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links checked for NICKS, CRACKS, GOUGING</label>
    <type>Checkbox</type>
</CustomField>