force-app/main/default/objects/Managed_Item_Inspection__c/fields/Links_Checked_for_TWISTING_WELD_SPLATTE__c.field-meta.xml
<CustomField>
    <fullName>Links_Checked_for_TWISTING_WELD_SPLATTE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links Checked for TWISTING/WELD SPLATTER</label>
    <type>Checkbox</type>
</CustomField>