force-app/main/default/objects/Managed_Item_Inspection__c/fields/Links_Inspected_for_REEVING__c.field-meta.xml
<CustomField>
    <fullName>Links_Inspected_for_REEVING__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reeved Link checked bend/twists/stretch</label>
    <type>Checkbox</type>
</CustomField>