force-app/main/default/objects/Managed_Item_Inspection__c/fields/Load_Pin_checked_for_EXCESSIVE_PLAY__c.field-meta.xml
<CustomField>
    <fullName>Load_Pin_checked_for_EXCESSIVE_PLAY__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>INSPECT FOR ANY SIGNS OF EXCESSIVE PLAY OF THE LOAD PIN WITHIN THE BODY HALVES</inlineHelpText>
    <label>Load Pin checked for EXCESSIVE PLAY</label>
    <type>Checkbox</type>
</CustomField>