force-app/main/default/objects/Managed_Item_Inspection__c/fields/Locks_Onto_Rope_Reliably__c.field-meta.xml
<CustomField>
    <fullName>Locks_Onto_Rope_Reliably__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locks Onto Rope Reliably</label>
    <type>Checkbox</type>
</CustomField>