force-app/main/default/objects/Managed_Item_Inspection__c/fields/Maintenance_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Conducted__c</fullName>
    <label>Maintenance Conducted during Inspection</label>
    <type>TextArea</type>
</CustomField>