force-app/main/default/objects/Managed_Item_Inspection__c/fields/Maintenance_Record_Tag_Label__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Record_Tag_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tag or label should be punched or permanently embossed with the level of serviced performed. 
Ensure that the equipment is identified by means of a permanently fixed and unique identification mark suitable to cross-reference with maintenance records.</inlineHelpText>
    <label>Maintenance Record Tag/Label</label>
    <type>Checkbox</type>
</CustomField>