force-app/main/default/objects/Managed_Item_Inspection__c/fields/Managed_Item__c.field-meta.xml
<CustomField>
    <fullName>Managed_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Item</label>
    <referenceTo>Inspection_Certification__c</referenceTo>
    <relationshipLabel>Managed Item Inspections</relationshipLabel>
    <relationshipName>Managed_Item_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>