force-app/main/default/objects/Managed_Item_Inspection__c/fields/Master_Gauge_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Gauge_ID__c</fullName>
    <inlineHelpText>This field is designed to identify the Master Gauge used to conduct the calibration against</inlineHelpText>
    <label>Master Gauge Used for Calibration (ID#)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>