force-app/main/default/objects/Managed_Item_Inspection__c/fields/Measure_Diameter_2__c.field-meta.xml
<CustomField>
    <fullName>Measure_Diameter_2__c</fullName>
    <inlineHelpText>Take at least 2 measurements of diameter approx 1 m apart and record the average (average sum of all totals divided by the number of measurements taken)</inlineHelpText>
    <label>Average Diameter (mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>