force-app/main/default/objects/Managed_Item_Inspection__c/fields/Missing_Damaged_Latches__c.field-meta.xml
<CustomField>
    <fullName>Missing_Damaged_Latches__c</fullName>
    <inlineHelpText>at load bearing points</inlineHelpText>
    <label>Terminal Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>