force-app/main/default/objects/Managed_Item_Inspection__c/fields/Moving_Parts_Operate_Smoothly__c.field-meta.xml
<CustomField>
    <fullName>Moving_Parts_Operate_Smoothly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moving Parts Operate Smoothly</label>
    <type>Checkbox</type>
</CustomField>