force-app/main/default/objects/Managed_Item_Inspection__c/fields/No_Broken_Weak_Misplaced_Latch_Spring__c.field-meta.xml
<CustomField>
    <fullName>No_Broken_Weak_Misplaced_Latch_Spring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Broken/Weak/Misplaced Latch Spring</label>
    <type>Checkbox</type>
</CustomField>