force-app/main/default/objects/Managed_Item_Inspection__c/fields/No_Missing_Parts__c.field-meta.xml
<CustomField>
    <fullName>No_Missing_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Missing Parts</label>
    <type>Checkbox</type>
</CustomField>