force-app/main/default/objects/Managed_Item_Inspection__c/fields/No_Modifications__c.field-meta.xml
<CustomField>
    <fullName>No_Modifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Outside of Manufacturer Instructions</inlineHelpText>
    <label>No Modifications</label>
    <type>Checkbox</type>
</CustomField>