force-app/main/default/objects/Managed_Item_Inspection__c/fields/nominal__c.field-meta.xml
<CustomField>
    <fullName>nominal__c</fullName>
    <inlineHelpText>This measurement is the diameter of the wire cable as new</inlineHelpText>
    <label>Nominal Diameter (mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>