force-app/main/default/objects/Managed_Item_Inspection__c/fields/Number_of_Broken_Wires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Broken_Wires__c</fullName>
    <inlineHelpText>Count the number of broken wires within a length of Wire Cable - 6 times the diameter (Diameter is the distance around the outside of the Wire Cable) (Nominal is the diameter at the start of its life)</inlineHelpText>
    <label># of Broken Wires over 6 x Diameter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>