force-app/main/default/objects/Managed_Item_Inspection__c/fields/of_Broken_Wires_over_30_times_diameter__c.field-meta.xml
<CustomField>
    <fullName>of_Broken_Wires_over_30_times_diameter__c</fullName>
    <inlineHelpText>Count the number of broken wires within a length of Wire Cable - 30 times the diameter (Diameter is the distance around the outside of the Wire Cable) (Nominal is the diameter at the start of its life)</inlineHelpText>
    <label># of Broken Wires over 30 x diameter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>