force-app/main/default/objects/Managed_Item_Inspection__c/fields/Outlet_Hose_Assembly__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Hose_Assembly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check discharge nozzle is correct type for the FE. If in doubt the service person is to check with the FE manufacturer. Hose should be checked for blockages by means of a probe or passage of air. Check the rubber casing for cracking or signs of bubbling.</inlineHelpText>
    <label>Outlet Hose Assembly</label>
    <type>Checkbox</type>
</CustomField>