force-app/main/default/objects/Managed_Item_Inspection__c/fields/Permanent_Marking_Load_Bearing_Webbing__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Marking_Load_Bearing_Webbing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Marking - Load Bearing Webbing</label>
    <type>Checkbox</type>
</CustomField>