force-app/main/default/objects/Managed_Item_Inspection__c/fields/Polyester_Anchorage_Sling_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Polyester_Anchorage_Sling_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Polyester Anchorage Sling Inspection</label>
    <type>Checkbox</type>
</CustomField>