force-app/main/default/objects/Managed_Item_Inspection__c/fields/Powder_Extinguishers__c.field-meta.xml
<CustomField>
    <fullName>Powder_Extinguishers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Invert the extinguisher and ensure that the powder remains free-flowing.</inlineHelpText>
    <label>Powder Extinguishers</label>
    <type>Checkbox</type>
</CustomField>