force-app/main/default/objects/Managed_Item_Inspection__c/fields/Pressure_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure that the pressure indicator is within the operating range, tap the indicator with a pen or similar item to ensure that the indicator is reading correctly, i.e. the indicator needle should displace then return to the original reading.</inlineHelpText>
    <label>Pressure Indicator</label>
    <type>Checkbox</type>
</CustomField>