force-app/main/default/objects/Managed_Item_Inspection__c/fields/Pressure_Range_psi__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Range_psi__c</fullName>
    <inlineHelpText>Pressure Range that gauge is rated 0 - 3000 psi</inlineHelpText>
    <label>Pressure Range (psi)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>