force-app/main/default/objects/Managed_Item_Inspection__c/fields/Pressure_Test__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All fire extinguisher types should be returned to an authorised testing station for service and pressure testing at five-yearly intervals.</inlineHelpText>
    <label>Pressure Test</label>
    <type>Checkbox</type>
</CustomField>