force-app/main/default/objects/Managed_Item_Inspection__c/fields/Protective_sheath_is_present__c.field-meta.xml
<CustomField>
    <fullName>Protective_sheath_is_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protective sheath is present</label>
    <type>Checkbox</type>
</CustomField>