force-app/main/default/objects/Managed_Item_Inspection__c/fields/Pulley_Belay_System_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Pulley_Belay_System_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulley / Belay System Inspection</label>
    <type>Checkbox</type>
</CustomField>