force-app/main/default/objects/Managed_Item_Inspection__c/fields/Reason_Inspection_Failed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Inspection_Failed__c</fullName>
    <inlineHelpText>If an Inspection result is FAIL a reason must be provided</inlineHelpText>
    <label>Provide Reason if Failed</label>
    <type>TextArea</type>
</CustomField>