force-app/main/default/objects/Managed_Item_Inspection__c/fields/Remote_Attachment_Device_Labelled__c.field-meta.xml
<CustomField>
    <fullName>Remote_Attachment_Device_Labelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Attachment Device Labelled</label>
    <type>Checkbox</type>
</CustomField>