force-app/main/default/objects/Managed_Item_Inspection__c/fields/Remote_Device_Functions_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Remote_Device_Functions_Correctly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Device Functions Correctly</label>
    <type>Checkbox</type>
</CustomField>