force-app/main/default/objects/Managed_Item_Inspection__c/fields/Remote_Device_Telescopic_Pole_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Remote_Device_Telescopic_Pole_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Device/Telescopic Pole Inspection</label>
    <type>Checkbox</type>
</CustomField>