force-app/main/default/objects/Managed_Item_Inspection__c/fields/Signage__c.field-meta.xml
<CustomField>
    <fullName>Signage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The sign should be of an approved type visible from a distance of 20m and mounted at a minimum of 2 meters above the ground level, ensure sign is permanently fixed.</inlineHelpText>
    <label>Signage</label>
    <type>Checkbox</type>
</CustomField>