force-app/main/default/objects/Managed_Item_Inspection__c/fields/Sling_FITTINGS_COMPONENTS_CHECKED__c.field-meta.xml
<CustomField>
    <fullName>Sling_FITTINGS_COMPONENTS_CHECKED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sling FITTINGS/COMPONENTS CHECKED</label>
    <type>Checkbox</type>
</CustomField>