force-app/main/default/objects/Managed_Item_Inspection__c/fields/Sling_Inspected_for__c.field-meta.xml
<CustomField>
    <fullName>Sling_Inspected_for__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sling Inspected for CUT/FUSED FIBRES</label>
    <type>Checkbox</type>
</CustomField>