force-app/main/default/objects/Managed_Item_Inspection__c/fields/Soft_sling__c.field-meta.xml
<CustomField>
    <fullName>Soft_sling__c</fullName>
    <label>Soft Sling Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>