force-app/main/default/objects/Managed_Item_Inspection__c/fields/Support_Brackets__c.field-meta.xml
<CustomField>
    <fullName>Support_Brackets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure that the support bracket is securely fixed to a suitable building support structure. Remove &amp; replace the extinguisher to ensure easy access in an emergency.</inlineHelpText>
    <label>Support Brackets</label>
    <type>Checkbox</type>
</CustomField>