force-app/main/default/objects/Managed_Item_Inspection__c/fields/Telescopic_Pole_Locks_into_Position__c.field-meta.xml
<CustomField>
    <fullName>Telescopic_Pole_Locks_into_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telescopic Pole Locks into Position</label>
    <type>Checkbox</type>
</CustomField>