force-app/main/default/objects/Managed_Item_Inspection__c/fields/Telescopic_Pole_Scopes_In_and_Out__c.field-meta.xml
<CustomField>
    <fullName>Telescopic_Pole_Scopes_In_and_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telescopic Pole Scopes In and Out</label>
    <type>Checkbox</type>
</CustomField>