force-app/main/default/objects/Managed_Item_Inspection__c/fields/Terminals_checked_for_GOUGING_STRETCH__c.field-meta.xml
<CustomField>
    <fullName>Terminals_checked_for_GOUGING_STRETCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminals checked for GOUGING/STRETCH</label>
    <type>Checkbox</type>
</CustomField>