force-app/main/default/objects/Managed_Item_Inspection__c/fields/Terminals_checked_for_NICKS_CRACKS__c.field-meta.xml
<CustomField>
    <fullName>Terminals_checked_for_NICKS_CRACKS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminals checked for NICKS/CRACKS</label>
    <type>Checkbox</type>
</CustomField>