force-app/main/default/objects/Managed_Item_Inspection__c/fields/Test_2_Master_Gauge_PSI__c.field-meta.xml
<CustomField>
    <fullName>Test_2_Master_Gauge_PSI__c</fullName>
    <label>Test 2 Master Gauge PSI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>