force-app/main/default/objects/Managed_Item_Inspection__c/fields/Test_2_Within_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Test_2_Within_Tolerance__c</fullName>
    <label>Test 2 Within Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>