force-app/main/default/objects/Managed_Item_Inspection__c/fields/Test_3_Op_Gauge_PSI__c.field-meta.xml
<CustomField>
    <fullName>Test_3_Op_Gauge_PSI__c</fullName>
    <label>Test 3 Op. Gauge PSI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>