force-app/main/default/objects/Managed_Item_Inspection__c/fields/Test_3Pressure_Difference__c.field-meta.xml
<CustomField>
    <fullName>Test_3Pressure_Difference__c</fullName>
    <inlineHelpText>Identify the number by which the operational gauge is more or less than the Master Gauge (eg -2 if the Operational Gauge is two PSI less than Master Gauge or +2 if it it is 2 more than the Master Gauge)</inlineHelpText>
    <label>Test 3 Pressure Difference (+/-)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>