force-app/main/default/objects/Managed_Item_Inspection__c/fields/Test_Report_Image__c.field-meta.xml
<CustomField>
    <fullName>Test_Report_Image__c</fullName>
    <label>Test Report (Image)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>