force-app/main/default/objects/Managed_Item_Inspection__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <inlineHelpText>Any visible or functional damage to the thread?</inlineHelpText>
    <label>Thread damaged?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>