force-app/main/default/objects/Managed_Item_Inspection__c/fields/Thread_rusty_or_tight__c.field-meta.xml
<CustomField>
    <fullName>Thread_rusty_or_tight__c</fullName>
    <inlineHelpText>The thread needs to be cleaned and lubricated.</inlineHelpText>
    <label>Thread rusty or tight?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>