force-app/main/default/objects/Managed_Item_Inspection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lifting Chain</fullName>
            </value>
            <value>
                <fullName>Soft Sling</fullName>
            </value>
            <value>
                <fullName>D Shackle</fullName>
            </value>
            <value>
                <fullName>Anchor Line</fullName>
            </value>
            <value>
                <fullName>Winch Line</fullName>
            </value>
            <value>
                <fullName>Drill Line</fullName>
            </value>
            <value>
                <fullName>Term. Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>