force-app/main/default/objects/Managed_Item_Inspection__c/fields/Unduly_worn__c.field-meta.xml
<CustomField>
    <fullName>Unduly_worn__c</fullName>
    <label>Unduly worn?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>